# ard-haskell

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  ard.cabal  simple.scene  stack.yaml
app/: Main.hs
lib/ARD/: BRDF.hs  Bitmap.hs  Box.hs  Camera.hs  Color.hs  Geometric.hs  Light.hs  Material.hs  Math.hs  Matrix.hs  Parser.hs  Plane.hs  Randomize.hs  Ray.hs  Rendering.hs  Sampler.hs  Shape.hs  Sphere.hs  Tracer.hs  Vector.hs  Vector2.hs  Vector3.hs  ViewPlane.hs  World.hs
scenes/: ambient_occlusion.ard  simple.ard  simple.scene
test/: Spec.hs
test/ARD/: BoxSpec.hs  CameraSpec.hs  ColorSpec.hs  MatrixSpec.hs  ParserSpec.hs  PlaneSpec.hs  SamplerSpec.hs  ShapeSpec.hs  SphereSpec.hs  TestHelper.hs  Vector2Spec.hs  Vector3Spec.hs  VectorSpec.hs
