name:                 ard
version:              0.1.0.0
synopsis:             Another Raytracer Demo
description:          Another Raytracer Demo
license:              MIT
license-file:         LICENSE
author:               Michael Zoech
maintainer:           michi.zoech@gmail.com
-- copyright:
category:             Graphics
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     lib
  build-depends:      base >= 4.8 && <4.9,
                      bytestring >= 0.10.8.1
  exposed-modules:    ARD.Bitmap,
                      ARD.Color,
                      ARD.Geometric,
                      ARD.Plane,
                      ARD.Ray,
                      ARD.Sphere,
                      ARD.Tracer,
                      ARD.Vector2,
                      ARD.Vector3,
                      ARD.ViewPlane,
                      ARD.World
  default-language:   Haskell2010

executable ard
  hs-source-dirs:     app
  main-is:            Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:      base >=4.8 && <4.9, ard
  default-language:   Haskell2010

test-suite spec
  hs-source-dirs:     test
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      ard,
                      base,
                      hspec >= 1.8,
                      QuickCheck >= 2.8.1
  default-language:   Haskell2010

