name:                 ard
version:              0.1.0.0
synopsis:             Another Raytracer Demo
description:          Another Raytracer Demo
license:              MIT
license-file:         LICENSE.txt
author:               Michael Zoech
maintainer:           michi.zoech@gmail.com
-- copyright:
category:             Graphics
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     lib
  build-depends:      base >= 4.8,
                      bytestring >= 0.10.8.1,
                      parallel >= 3.2.1.0,
                      parsec >= 3.1.11
  exposed-modules:    ARD.Bitmap,
                      ARD.BRDF,
                      ARD.Camera,
                      ARD.Color,
                      ARD.Geometric,
                      ARD.Light,
                      ARD.Material,
                      ARD.Parser,
                      ARD.Plane,
                      ARD.Ray,
                      ARD.Sampler,
                      ARD.Sphere,
                      ARD.Tracer,
                      ARD.Vector,
                      ARD.ViewPlane,
                      ARD.World
  ghc-options:        -O2
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables

executable ard
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base >=4.8, ard
  ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables

test-suite spec
  hs-source-dirs:     test
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      ard,
                      base,
                      hspec >= 1.8,
                      parsec >= 3.1.11,
                      QuickCheck >= 2.8.1
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables

